RESOLVED FIXED302924
Fix unsafe use of raw pointers in BaseAudioContext.h
https://bugs.webkit.org/show_bug.cgi?id=302924
Summary Fix unsafe use of raw pointers in BaseAudioContext.h
Chris Dumez
Reported 2025-11-21 01:10:22 PST
Fix unsafe use of raw pointers in BaseAudioContext.h.
Attachments
Chris Dumez
Comment 1 2025-11-21 01:22:00 PST
EWS
Comment 2 2025-11-22 18:28:47 PST
Committed 303454@main (8749eded36e4): <https://commits.webkit.org/303454@main> Reviewed commits have been landed. Closing PR #54302 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-11-22 18:29:12 PST
Note You need to log in before you can comment on or make changes to this bug.