Fix unsafe use of raw pointers in BaseAudioContext.h https://bugs.webkit.org/show_bug.cgi?id=302924

Reviewed by Geoffrey Garen.

* Source/WebCore/Modules/webaudio/AnalyserNode.cpp:
(WebCore::AnalyserNode::process):
(WebCore::AnalyserNode::updatePullStatus):
* Source/WebCore/Modules/webaudio/AudioBasicInspectorNode.cpp:
(WebCore::AudioBasicInspectorNode::pullInputs):
(WebCore::AudioBasicInspectorNode::checkNumberOfChannelsForInput):
(WebCore::AudioBasicInspectorNode::updatePullStatus):
* Source/WebCore/Modules/webaudio/AudioBasicProcessorNode.cpp:
(WebCore::AudioBasicProcessorNode::process):
(WebCore::AudioBasicProcessorNode::pullInputs):
(WebCore::AudioBasicProcessorNode::checkNumberOfChannelsForInput):
* Source/WebCore/Modules/webaudio/AudioBufferSourceNode.cpp:
(WebCore::AudioBufferSourceNode::process):
(WebCore::AudioBufferSourceNode::setBufferForBindings):
* Source/WebCore/Modules/webaudio/AudioDestinationNode.cpp:
(WebCore::AudioDestinationNode::renderQuantum):
* Source/WebCore/Modules/webaudio/AudioNode.cpp:
(WebCore::AudioNode::addInput):
(WebCore::AudioNode::input):
(WebCore::AudioNode::checkedInput):
(WebCore::AudioNode::checkedOutput):
(WebCore::AudioNode::connect):
(WebCore::AudioNode::disconnect):
(WebCore::AudioNode::checkNumberOfChannelsForInput):
* Source/WebCore/Modules/webaudio/AudioNode.h:
* Source/WebCore/Modules/webaudio/AudioNodeInput.cpp:
(WebCore::AudioNodeInput::create):
(WebCore::AudioNodeInput::pull):
* Source/WebCore/Modules/webaudio/AudioNodeInput.h:
* Source/WebCore/Modules/webaudio/AudioNodeOutput.cpp:
(WebCore::AudioNodeOutput::disconnectAllInputs):
(WebCore::AudioNodeOutput::addParam):
(WebCore::AudioNodeOutput::removeParam):
(WebCore::AudioNodeOutput::disconnectAllParams):
* Source/WebCore/Modules/webaudio/AudioNodeOutput.h:
(WebCore::AudioNodeOutput::node const): Deleted.
(WebCore::AudioNodeOutput::checkedNode const): Deleted.
(WebCore::AudioNodeOutput::context): Deleted.
(WebCore::AudioNodeOutput::numberOfChannels const): Deleted.
(WebCore::AudioNodeOutput::isChannelCountKnown const): Deleted.
(WebCore::AudioNodeOutput::isConnected): Deleted.
(WebCore::AudioNodeOutput::isConnectedTo const): Deleted.
(WebCore::AudioNodeOutput::isEnabled const): Deleted.
* Source/WebCore/Modules/webaudio/AudioParam.cpp:
* Source/WebCore/Modules/webaudio/AudioParam.h:
* Source/WebCore/Modules/webaudio/AudioSummingJunction.cpp:
(WebCore::AudioSummingJunction::maximumNumberOfChannels const):
* Source/WebCore/Modules/webaudio/AudioSummingJunction.h:
* Source/WebCore/Modules/webaudio/AudioWorkletNode.cpp:
(WebCore::AudioWorkletNode::process):
(WebCore::AudioWorkletNode::updatePullStatus):
(WebCore::AudioWorkletNode::checkNumberOfChannelsForInput):
* Source/WebCore/Modules/webaudio/BaseAudioContext.cpp:
(WebCore::BaseAudioContext::deleteMarkedNodes):
* Source/WebCore/Modules/webaudio/BaseAudioContext.h:
(WebCore::BaseAudioContext::setAudioThread):
(WebCore::BaseAudioContext::isAudioThread const):
* Source/WebCore/Modules/webaudio/ChannelMergerNode.cpp:
(WebCore::ChannelMergerNode::process):
* Source/WebCore/Modules/webaudio/ChannelSplitterNode.cpp:
(WebCore::ChannelSplitterNode::process):
* Source/WebCore/Modules/webaudio/ConstantSourceNode.cpp:
(WebCore::ConstantSourceNode::process):
* Source/WebCore/Modules/webaudio/ConvolverNode.cpp:
(WebCore::ConvolverNode::process):
(WebCore::ConvolverNode::setBufferForBindings):
(WebCore::ConvolverNode::checkNumberOfChannelsForInput):
* Source/WebCore/Modules/webaudio/DefaultAudioDestinationNode.cpp:
(WebCore::DefaultAudioDestinationNode::isConnected const):
* Source/WebCore/Modules/webaudio/DelayNode.cpp:
(WebCore::DelayNode::create):
(WebCore::DelayNode::checkedDelayTime):
* Source/WebCore/Modules/webaudio/DelayNode.h:
* Source/WebCore/Modules/webaudio/DynamicsCompressorNode.cpp:
(WebCore::DynamicsCompressorNode::process):
* Source/WebCore/Modules/webaudio/GainNode.cpp:
(WebCore::GainNode::process):
(WebCore::GainNode::checkNumberOfChannelsForInput):
* Source/WebCore/Modules/webaudio/MediaElementAudioSourceNode.cpp:
(WebCore::MediaElementAudioSourceNode::setFormat):
(WebCore::MediaElementAudioSourceNode::process):
* Source/WebCore/Modules/webaudio/MediaStreamAudioSourceNode.cpp:
(WebCore::MediaStreamAudioSourceNode::setFormat):
(WebCore::MediaStreamAudioSourceNode::process):
* Source/WebCore/Modules/webaudio/OfflineAudioContext.cpp:
(WebCore::OfflineAudioContext::increaseNoiseMultiplierIfNeeded):
* Source/WebCore/Modules/webaudio/OscillatorNode.cpp:
(WebCore::OscillatorNode::process):
* Source/WebCore/Modules/webaudio/OscillatorNode.h:
* Source/WebCore/Modules/webaudio/PannerNode.cpp:
(WebCore::PannerNode::process):
* Source/WebCore/Modules/webaudio/ScriptProcessorNode.cpp:
(WebCore::ScriptProcessorNode::process):
* Source/WebCore/Modules/webaudio/StereoPannerNode.cpp:
(WebCore::StereoPannerNode::process):
* Source/WebCore/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:
* Source/WebCore/SaferCPPExpectations/UncountedLocalVarsCheckerExpectations:

Canonical link: https://commits.webkit.org/303454@main