Source/WebCore/Modules/webaudio/AudioNodeInput.h
@@ -41,11 +41,12 @@ class AudioNodeOutput;
 // In the case of multiple connections, the input will act as a unity-gain summing junction, mixing all the outputs.
 // The number of channels of the input's bus is the maximum of the number of channels of all its connections.
 
-class AudioNodeInput final : public AudioSummingJunction {
+class AudioNodeInput final : public AudioSummingJunction, public ThreadSafeRefCounted<AudioNodeInput> {
     WTF_MAKE_NONCOPYABLE(AudioNodeInput);
     WTF_MAKE_TZONE_ALLOCATED(AudioNodeInput);
+    WTF_OVERRIDE_DELETE_FOR_CHECKED_PTR(AudioNodeInput);
 public:
-    explicit AudioNodeInput(AudioNode*);
+    static Ref<AudioNodeInput> create(AudioNode*);
 
     // AudioSummingJunction
     bool canUpdateState() override { return !node()->isMarkedForDeletion(); }
@@ -74,7 +75,7 @@ public:
 
     // bus() contains the rendered audio after pull() has been called for each time quantum.
     // Called from context's audio thread.
-    AudioBus& bus();
+    AudioBus& bus() LIFETIME_BOUND;
 
     // updateInternalBus() updates m_internalSummingBus appropriately for the number of channels.
     // This must be called when we own the context's graph lock in the audio thread at the very start or end of the render quantum.
@@ -84,6 +85,8 @@ public:
     unsigned numberOfChannels() const;        
     
 private:
+    explicit AudioNodeInput(AudioNode*);
+
     WeakPtr<AudioNode, WeakPtrImplWithEventTargetData> m_node;
 
     // m_disabledOutputs contains the AudioNodeOutputs which are disabled (will not be processed) by the audio graph rendering.
