Source/WebCore/Modules/webaudio/OscillatorNode.h
@@ -45,8 +45,8 @@ public:
     OscillatorType typeForBindings() const { ASSERT(isMainThread()); return m_type; }
     ExceptionOr<void> setTypeForBindings(OscillatorType);
 
-    AudioParam* frequency() { return m_frequency.get(); }
-    AudioParam* detune() { return m_detune.get(); }
+    AudioParam& frequency() { return m_frequency.get(); }
+    AudioParam& detune() { return m_detune.get(); }
 
     void setPeriodicWave(PeriodicWave&);
 
@@ -72,10 +72,10 @@ private:
     OscillatorType m_type; // Only used on the main thread.
     
     // Frequency value in Hertz.
-    RefPtr<AudioParam> m_frequency;
+    const Ref<AudioParam> m_frequency;
 
     // Detune value (deviating from the frequency) in Cents.
-    RefPtr<AudioParam> m_detune;
+    const Ref<AudioParam> m_detune;
 
     bool m_firstRender { true };
 
